Adding a new person to the list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-persons></app-persons>
+<app-person-input (personCreate)="onPersonCreated($event)"></app-person-input>
+<app-persons [personList]="persons"></app-persons>
